--- a/src/main/resources/fxml/basicCanvasTest.fxml
+++ b/src/main/resources/fxml/basicCanvasTest.fxml
@@ -1,27 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="662.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <HBox BorderPane.alignment="CENTER">
+      <HBox prefWidth="535.0" BorderPane.alignment="CENTER">
          <children>
-            <Line endX="98.68130493164062" endY="173.36978149414062" startX="98.68130493164062" startY="128.15689086914062" />
-            <Canvas fx:id="SimCanvas" height="400.0" width="500.0" />
+            <Line endX="50.0" endY="860.0" startX="50.0" startY="460.0" />
+            <Canvas fx:id="SimCanvas" height="400.0" width="532.0" />
          </children>
       </HBox>
    </center>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="409.0" prefWidth="130.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="btnTest" mnemonicParsing="false" text="Test 1 Point" />
             <Button fx:id="btnStop" mnemonicParsing="false" text="Stop" />
-            <Button fx:id="btnStart" mnemonicParsing="false" text="Start" />
-         </children></VBox>
+            <Button fx:id="btnStart" mnemonicParsing="false" text="Restart" />
+            <Label text="Scaling" />
+            <ChoiceBox fx:id="scaleChoice" prefWidth="150.0">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin></ChoiceBox>
+            <Label prefHeight="25.0" prefWidth="101.0" text="Damping Dynamic" />
+            <Slider fx:id="sldrDamping" blockIncrement="0.001" majorTickUnit="0.1" max="0.999" min="0.85" showTickLabels="true" showTickMarks="true" value="0.9">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin></Slider>
+            <Label fx:id="lblDamping" text="0.900" />
+         </children>
+         <BorderPane.margin>
+            <Insets top="20.0" />
+         </BorderPane.margin></VBox>
    </left>
 </BorderPane>
