--- a/src/main/resources/fxml/mainAppTest.fxml
+++ b/src/main/resources/fxml/mainAppTest.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="26.0" prefWidth="862.0" BorderPane.alignment="CENTER">
          <children>
@@ -119,9 +119,9 @@
                               <Canvas fx:id="SimCanvas" height="400.0" width="532.0" />
                               <HBox alignment="CENTER" prefHeight="46.0" prefWidth="658.0" spacing="30.0" style="-fx-alignment: center;">
                                  <children>
-                                    <Button fx:id="btnTest" mnemonicParsing="false" text="Start" />
-                                    <Button fx:id="btnStop" mnemonicParsing="false" text="Pause" />
-                                    <Button fx:id="btnStart" mnemonicParsing="false" text="Reset" />
+                                    <Button fx:id="btnPlay" mnemonicParsing="false" text="Play" />
+                                    <Button fx:id="btnPause" mnemonicParsing="false" text="Pause" />
+                                    <Button fx:id="btnReset" mnemonicParsing="false" text="Reset" />
                                  </children>
                                  <padding>
                                     <Insets left="20.0" />
