--- a/src/main/resources/fxml/mainAppTest.fxml
+++ b/src/main/resources/fxml/mainAppTest.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="26.0" prefWidth="862.0" BorderPane.alignment="CENTER">
          <children>
@@ -64,6 +64,17 @@
             <ChoiceBox fx:id="scaleChoice" prefWidth="120.0" />
             <Label fx:id="lblScaling1" text="Simulation Type" />
             <ChoiceBox fx:id="simTypeChoice" prefWidth="120.0" />
+            <Label text="Speed Milliseconds" />
+            <Slider fx:id="sldrSpeed" blockIncrement="1.0" majorTickUnit="100.0" max="500.0" min="1.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" value="1.0">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin>
+            </Slider>
+            <Label fx:id="lblSpeed" text="1">
+               <VBox.margin>
+                  <Insets top="-10.0" />
+               </VBox.margin>
+            </Label>
             <Accordion>
                <panes>
                   <TitledPane animated="false" text="Simple Ripple">
