--- a/src/main/resources/fxml/mainAppTest.fxml
+++ b/src/main/resources/fxml/mainAppTest.fxml
@@ -28,6 +28,8 @@
                   <Menu mnemonicParsing="false" text="File">
                      <items>
                         <MenuItem mnemonicParsing="false" text="TBD" />
+                        <MenuItem fx:id="itmSave" mnemonicParsing="false" text="Save Settings" />
+                        <MenuItem fx:id="itmLoad" mnemonicParsing="false" text="Load Settings" />
                      </items>
                   </Menu>
                   <Menu mnemonicParsing="false" text="Render">
