--- a/src/main/resources/fxml/mainAppTest.fxml
+++ b/src/main/resources/fxml/mainAppTest.fxml
@@ -153,7 +153,21 @@
             </Tab>
             <Tab text="Render">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="30.0">
+                           <children>
+                              <Canvas height="374.0" width="546.0" />
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
+                                 <children>
+                                    <Button fx:id="btnSaveRender" mnemonicParsing="false" text="Save" />
+                                    <Button fx:id="btnPauseRender" mnemonicParsing="false" text="Pause" />
+                                    <Button fx:id="btnResetRender" mnemonicParsing="false" text="Reset" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children></AnchorPane>
                </content>
             </Tab>
          </tabs>
