--- a/src/main/resources/fxml/mainAppTest.fxml
+++ b/src/main/resources/fxml/mainAppTest.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="26.0" prefWidth="862.0" BorderPane.alignment="CENTER">
          <children>
@@ -35,6 +35,7 @@
                   <Menu mnemonicParsing="false" text="Render">
                      <items>
                         <MenuItem fx:id="itmRenderStart" mnemonicParsing="false" text="Start" />
+                        <MenuItem fx:id="itmStopRender" mnemonicParsing="false" text="Stop" />
                         <MenuItem fx:id="itmRenderSettings" mnemonicParsing="false" text="Render Settings..." />
                      </items>
                   </Menu>
