Basic window for modal help dialog.
Basic FXML done. Upon click from the user, the help dialog appears.

--- a/src/main/resources/fxml/mainAppTest.fxml
+++ b/src/main/resources/fxml/mainAppTest.fxml
@@ -46,7 +46,7 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="Help">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Guide" />
+                        <MenuItem fx:id="guideItm" mnemonicParsing="false" text="Guide" />
                         <MenuItem mnemonicParsing="false" text="About" />
                      </items>
                   </Menu>
