--- a/src/main/resources/fxml/mainAppFXML.fxml
+++ b/src/main/resources/fxml/mainAppFXML.fxml
@@ -9,9 +9,11 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -20,7 +22,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="26.0" prefWidth="862.0" BorderPane.alignment="CENTER">
          <children>
@@ -36,7 +38,6 @@
                      <items>
                         <MenuItem fx:id="itmRenderStart" mnemonicParsing="false" text="Start" />
                         <MenuItem fx:id="itmStopRender" mnemonicParsing="false" text="Stop" />
-                        <MenuItem fx:id="itmRenderSettings" mnemonicParsing="false" text="Render Settings..." />
                      </items>
                   </Menu>
                   <Menu mnemonicParsing="false" text="Edit">
@@ -78,43 +79,82 @@
                   <Insets top="-10.0" />
                </VBox.margin>
             </Label>
-            <Slider />
             <Accordion>
                <panes>
                   <TitledPane animated="false" text="Simple Ripple">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <VBox alignment="TOP_CENTER" prefHeight="181.0" prefWidth="151.0" style="-fx-alignment: top-center;">
-                                 <children>
-                                    <Label text="Dynamic Damping" />
-                                    <Slider fx:id="sldrDamping" blockIncrement="0.001" majorTickUnit="0.1" max="0.15" min="0.001" showTickLabels="true" showTickMarks="true" value="0.02">
-                                       <VBox.margin>
-                                          <Insets left="10.0" right="10.0" />
-                                       </VBox.margin>
-                                    </Slider>
-                                    <Label fx:id="lblDamping" text="0.020">
+                              <ScrollPane prefHeight="88.0" prefWidth="153.0">
+                                 <content>
+                                    <VBox alignment="TOP_CENTER" prefHeight="181.0" prefWidth="135.0" style="-fx-alignment: top-center;">
+                                       <children>
+                                          <Label text="Dynamic Damping" />
+                                          <Slider fx:id="sldrDamping" blockIncrement="0.001" majorTickUnit="0.1" max="0.15" min="0.001" showTickLabels="true" showTickMarks="true" value="0.02">
+                                             <VBox.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </VBox.margin>
+                                          </Slider>
+                                          <Label fx:id="lblDamping" text="0.020">
+                                             <padding>
+                                                <Insets top="1.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label text="Frame Limit">
+                                             <VBox.margin>
+                                                <Insets top="10.0" />
+                                             </VBox.margin>
+                                          </Label>
+                                          <TextField fx:id="txtBoxRippleLimit" text="max" />
+                                       </children>
                                        <padding>
-                                          <Insets top="1.0" />
+                                          <Insets top="10.0" />
                                        </padding>
-                                    </Label>
-                                 </children>
-                                 <padding>
-                                    <Insets top="10.0" />
-                                 </padding>
-                              </VBox>
+                                    </VBox>
+                                 </content>
+                              </ScrollPane>
                            </children>
                         </AnchorPane>
                      </content>
                   </TitledPane>
                   <TitledPane animated="false" text="Conway's Game of Life">
                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <ScrollPane prefHeight="88.0" prefWidth="153.0">
+                                 <content>
+                                    <VBox alignment="TOP_CENTER" prefHeight="181.0" prefWidth="135.0" style="-fx-alignment: top-center;">
+                                       <padding>
+                                          <Insets top="10.0" />
+                                       </padding>
+                                       <children>
+                                          <Label text="Frame Limit" />
+                                          <TextField fx:id="txtBoxConwayLimit" text="max" />
+                                       </children>
+                                    </VBox>
+                                 </content>
+                              </ScrollPane>
+                           </children></AnchorPane>
                      </content>
                   </TitledPane>
-                  <TitledPane animated="false" text="Simulation 3">
+                  <TitledPane animated="false" text="Rock-Paper-Scissors">
                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <ScrollPane prefHeight="88.0" prefWidth="153.0">
+                                 <content>
+                                    <VBox alignment="TOP_CENTER" prefHeight="181.0" prefWidth="135.0" style="-fx-alignment: top-center;">
+                                       <padding>
+                                          <Insets top="10.0" />
+                                       </padding>
+                                       <children>
+                                          <Label text="Frame Limit" />
+                                          <TextField fx:id="txtBoxRPCLimit" text="max" />
+                                       </children>
+                                    </VBox>
+                                 </content>
+                              </ScrollPane>
+                           </children></AnchorPane>
                      </content>
                   </TitledPane>
                   <TitledPane animated="false" text="Simulation 4">
