--- a/src/main/resources/fxml/mainAppFXML.fxml
+++ b/src/main/resources/fxml/mainAppFXML.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="26.0" prefWidth="862.0" BorderPane.alignment="CENTER">
          <children>
@@ -78,7 +78,14 @@
                   <Insets top="-10.0" />
                </VBox.margin>
             </Label>
-            <Slider />
+            <Label fx:id="amplitudeLbl" text="Amplitude" />
+            <Slider fx:id="amplitudeSldr" blockIncrement="1.0" majorTickUnit="3.0" max="10.0" min="1.0" minorTickCount="2" prefHeight="38.0" prefWidth="98.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin></Slider>
             <Accordion>
                <panes>
                   <TitledPane animated="false" text="Simple Ripple">
