--- a/src/main/resources/fxml/mainAppFXML.fxml
+++ b/src/main/resources/fxml/mainAppFXML.fxml
@@ -23,7 +23,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane prefHeight="636.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="636.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="26.0" prefWidth="862.0" BorderPane.alignment="CENTER">
          <children>
@@ -86,7 +86,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane prefHeight="169.0" prefWidth="154.0">
+                              <ScrollPane prefHeight="169.0" prefWidth="154.0" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-10.0" AnchorPane.rightAnchor="-10.0" AnchorPane.topAnchor="-10.0">
                                  <content>
                                     <VBox alignment="TOP_CENTER" prefHeight="207.0" prefWidth="135.0" style="-fx-alignment: top-center;">
                                        <children>
@@ -131,7 +131,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane prefHeight="88.0" prefWidth="153.0">
+                              <ScrollPane prefHeight="88.0" prefWidth="153.0" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-10.0" AnchorPane.rightAnchor="-10.0" AnchorPane.topAnchor="-10.0">
                                  <content>
                                     <VBox alignment="TOP_CENTER" prefHeight="181.0" prefWidth="135.0" style="-fx-alignment: top-center;">
                                        <padding>
@@ -151,7 +151,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane prefHeight="88.0" prefWidth="153.0">
+                              <ScrollPane prefHeight="88.0" prefWidth="153.0" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-10.0" AnchorPane.rightAnchor="-10.0" AnchorPane.topAnchor="-10.0">
                                  <content>
                                     <VBox alignment="TOP_CENTER" prefHeight="181.0" prefWidth="135.0" style="-fx-alignment: top-center;">
                                        <padding>
@@ -171,7 +171,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane prefHeight="149.0" prefWidth="154.0">
+                              <ScrollPane prefHeight="149.0" prefWidth="154.0" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-10.0" AnchorPane.rightAnchor="-10.0" AnchorPane.topAnchor="-10.0">
                                  <content>
                                     <VBox alignment="TOP_CENTER" prefHeight="181.0" prefWidth="135.0" style="-fx-alignment: top-center;">
                                        <padding>
@@ -196,7 +196,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane prefHeight="88.0" prefWidth="153.0">
+                              <ScrollPane prefHeight="88.0" prefWidth="153.0" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-10.0" AnchorPane.rightAnchor="-10.0" AnchorPane.topAnchor="-10.0">
                                  <content>
                                     <VBox alignment="TOP_CENTER" prefHeight="181.0" prefWidth="135.0" style="-fx-alignment: top-center;">
                                        <padding>
@@ -217,12 +217,12 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane prefHeight="200.0" prefWidth="200.0">
+                              <ScrollPane layoutY="29.6" prefHeight="142.0" prefWidth="150.0" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-10.0" AnchorPane.rightAnchor="-10.0" AnchorPane.topAnchor="-10.0">
                                  <content>
-                                    <VBox alignment="TOP_CENTER" prefHeight="82.0" prefWidth="153.0">
+                                    <VBox alignment="TOP_CENTER" prefHeight="149.0" prefWidth="150.0">
                                        <children>
                                           <Label text="Frame Limit" />
-                                          <TextField text="max" />
+                                          <TextField fx:id="txtBoxBrainFrameLimit" text="max" />
                                        </children>
                                     </VBox>
                                  </content>
